--- a/portfolio.html
+++ b/portfolio.html
@@ -35,18 +35,22 @@
         <ul class="contacts list">
           <li class="site-nav-items">
             <div class="email">
-              <svg class="email-icon">
-                <use href="./images/icons.svg#icon-email"></use>
-              </svg>
-              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <a class="contacts-links" href="mailto:info@devstudio.com">
+                <svg class="email-icon">
+                  <use href="./images/icons.svg#icon-email"></use>
+                </svg>
+                info@devstudio.com</a
+              >
             </div>
           </li>
           <li class="site-nav-items">
             <div class="phone">
-              <svg class="phone-icon">
-                <use href="./images/icons.svg#icon-telephone"></use>
-              </svg>
-              <a href="tel:+380961111111">+38 096 111 11 11</a>
+              <a class="contacts-links" href="tel:+380961111111">
+                <svg class="phone-icon">
+                  <use href="./images/icons.svg#icon-telephone"></use>
+                </svg>
+                +38 096 111 11 11</a
+              >
             </div>
           </li>
         </ul>
@@ -79,13 +83,23 @@
           <ul class="project-items list">
             <li class="item">
               <a class="project-item-link" href="">
-                <img
-                  class="item-image"
-                  src="images/imgp1.jpg"
-                  alt="открытое окно сайта в браузере на
+                <div class="item-overlay">
+                  <img
+                    class="item-image"
+                    src="images/imgp1.jpg"
+                    alt="открытое окно сайта в браузере на
             экране ноутбука"
-                  width="370"
-                />
+                    width="370"
+                  />
+                  <div class="item-overlay-description">
+                    <p>
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <div class="item-wrapper">
                   <h2 class="item-title">Технокряк</h2>
                   <p class="item-description">Веб-сайт</p>
@@ -94,12 +108,17 @@
             </li>
             <li class="item">
               <a class="project-item-link" href="">
-                <img
-                  class="item-image"
-                  src="images/imgp2.jpg"
-                  alt="два баскетболиста деруться за мяч"
-                  width="370"
-                />
+                <div class="item-overlay">
+                  <img
+                    class="item-image"
+                    src="images/imgp2.jpg"
+                    alt="два баскетболиста деруться за мяч"
+                    width="370"
+                  />
+                  <div class="item-overlay-description">
+                    <p></p>
+                  </div>
+                </div>
                 <div class="item-wrapper">
                   <h2 class="item-title">
                     Постер <span lang="en">New Orlean vs Golden Star</span>
@@ -110,12 +129,19 @@
             </li>
             <li class="item">
               <a class="project-item-link" href="">
-                <img
-                  class="item-image"
-                  src="images/imgp3.jpg"
-                  alt="логотип рыбного ресторана"
-                  width="370"
-                />
+                <div class="item-overlay">
+                  <img
+                    class="item-image"
+                    class="item-image"
+                    class="item-image"
+                    src="images/imgp3.jpg"
+                    alt="логотип рыбного ресторана"
+                    width="370"
+                  />
+                  <div class="item-overlay-description">
+                    <p></p>
+                  </div>
+                </div>
                 <div class="item-wrapper">
                   <h2 class="item-title">
                     Ресторан <span lang="en">Seafood</span>
@@ -126,12 +152,17 @@
             </li>
             <li class="item">
               <a class="project-item-link" href="">
-                <img
-                  class="item-image"
-                  src="images/imgp4.jpg"
-                  alt="наушники"
-                  width="370"
-                />
+                <div class="item-overlay">
+                  <img
+                    class="item-image"
+                    src="images/imgp4.jpg"
+                    alt="наушники"
+                    width="370"
+                  />
+                  <div class="item-overlay-description">
+                    <p></p>
+                  </div>
+                </div>
                 <div class="item-wrapper">
                   <h2 class="item-title">
                     Проект <span lang="en">Prime</span>
@@ -142,12 +173,17 @@
             </li>
             <li class="item">
               <a class="project-item-link" href="">
-                <img
-                  class="item-image"
-                  src="images/imgp5.jpg"
-                  alt="большая белая коробка и маленькая розовая"
-                  width="370"
-                />
+                <div class="item-overlay">
+                  <img
+                    class="item-image"
+                    src="images/imgp5.jpg"
+                    alt="большая белая коробка и маленькая розовая"
+                    width="370"
+                  />
+                  <div class="item-overlay-description">
+                    <p></p>
+                  </div>
+                </div>
                 <div class="item-wrapper">
                   <h3 class="item-title">
                     Проект <span lang="en">Boxes</span>
@@ -158,13 +194,18 @@
             </li>
             <li class="item">
               <a class="project-item-link" href="">
-                <img
-                  class="item-image"
-                  src="images/imgp6.jpg"
-                  alt="открытое окно сайта в браузере на
+                <div class="item-overlay">
+                  <img
+                    class="item-image"
+                    src="images/imgp6.jpg"
+                    alt="открытое окно сайта в браузере на
             экране компьютера"
-                  width="370"
-                />
+                    width="370"
+                  />
+                  <div class="item-overlay-description">
+                    <p></p>
+                  </div>
+                </div>
                 <div class="item-wrapper">
                   <h3 class="item-title" lang="en">
                     Inspiration has no borders
@@ -175,12 +216,17 @@
             </li>
             <li class="item">
               <a class="project-item-link" href="">
-                <img
-                  class="item-image"
-                  src="images/imgp7.jpg"
-                  alt="разворот издания"
-                  width="370"
-                />
+                <div class="item-overlay">
+                  <img
+                    class="item-image"
+                    src="images/imgp7.jpg"
+                    alt="разворот издания"
+                    width="370"
+                  />
+                  <div class="item-overlay-description">
+                    <p></p>
+                  </div>
+                </div>
                 <div class="item-wrapper">
                   <h3 class="item-title">
                     Издание <span lang="en">Limited Edition</span>
@@ -191,12 +237,17 @@
             </li>
             <li class="item">
               <a class="project-item-link" href="">
-                <img
-                  class="item-image"
-                  src="images/imgp8.jpg"
-                  alt="этикетка для проекта"
-                  width="370"
-                />
+                <div class="item-overlay">
+                  <img
+                    class="item-image"
+                    src="images/imgp8.jpg"
+                    alt="этикетка для проекта"
+                    width="370"
+                  />
+                  <div class="item-overlay-description">
+                    <p></p>
+                  </div>
+                </div>
                 <div class="item-wrapper">
                   <h3 class="item-title">Проект <span lang="en">LAB</span></h3>
                   <p class="item-description">Маркетинг</p>
@@ -205,12 +256,17 @@
             </li>
             <li class="item">
               <a class="project-item-link" href="">
-                <img
-                  class="item-image"
-                  src="images/imgp9.jpg"
-                  alt="руки на клавиатуре ноутбука с открытым приложением для бизнесса"
-                  width="370"
-                />
+                <div class="item-overlay">
+                  <img
+                    class="item-image"
+                    src="images/imgp9.jpg"
+                    alt="руки на клавиатуре ноутбука с открытым приложением для бизнесса"
+                    width="370"
+                  />
+                  <div class="item-overlay-description">
+                    <p></p>
+                  </div>
+                </div>
                 <div class="item-wrapper">
                   <h3 class="item-title" lang="en">Growing Business</h3>
                   <p class="item-description">Приложение</p>
@@ -221,7 +277,6 @@
         </div>
       </section>
     </main>
-    <
     <footer class="page-footer">
       <div class="container-footer container">
         <div>
@@ -243,28 +298,28 @@
           <ul class="social-network-list list">
             <li class="social-network-item footer">
               <a href="" class="social-network-link">
-                <svg class="social-network-icon">
+                <svg class="social-network-icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-network-item footer">
               <a href="" class="social-network-link">
-                <svg class="social-network-icon">
+                <svg class="social-network-icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-network-item footer">
               <a href="" class="social-network-link">
-                <svg class="social-network-icon">
+                <svg class="social-network-icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-network-item footer">
               <a href="" class="social-network-link">
-                <svg class="social-network-icon">
+                <svg class="social-network-icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
